force-app/main/default/objects/Ticket_Type__c/fields/Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Sold__c</fullName>
    <label>Quantity Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>